# lev-anchor

./: .gitignore  Anchor.toml  BETA_MINIMAL.md  Cargo.toml  LICENSE  PROGRAM_IDS.md  README.md  admin-daily-news.html  admin-final.html  admin-skr-mint.html  package-lock.json  package.json  skr-mint-keypair.json  test-claim-skr.html
archive/: README.md  sanitas_seeker_lib_full_2026-04-24.rs
docs/: ADMIN_LOCAL_SERVER.md  CNFT_LEGEND_ROADMAP.md  COPYRIGHT.md  EULA.md  FUTURE_SECOND_REWARD_MINT.md  LEGEND_MINT_RESTORE_AND_TEST.md  LICENSE.md  PRIVACY_POLICY.md  README.md  SEEKER_CALC_FUND.md  SKR_STAKING_INTEGRATION.md  TERMS.md  index.html  privacy.html  terms.html
keys/: .gitignore  README.md
programs/fitness-sbt/: Cargo.toml
programs/fitness-sbt/src/: lib.rs
programs/fitness_app/src/: lib.rs
programs/governor/: Cargo.toml
programs/governor/src/: lib.rs
scripts/: devnet-auto-approve-gate.cjs  serve-admin.cjs  set-seeker-genesis-mint.cjs
tests/: fitness-sbt.ts  legend_mint_local.e2e.ts  sanitas_seeker.ts
tests/fixtures/: dcrf_skr_mint.json
