[package]
name = "sanitas_seeker"
version = "0.1.0"
description = "Fitness SBT Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sanitas_seeker"

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]