[package]
name = "sanitas_seeker"
version = "0.1.0"
description = "Sanitas Seeker (beta-minimal) — SKE-Claim + news + log; full source archived under fitness-sbt/archive/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sanitas_seeker"

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
