[package]
name = "sanitas_seeker"
version = "0.1.0"
description = "Sanitas Seeker (beta-minimal) — SKE-Claim + news + log; full source archived under fitness-sbt/archive/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sanitas_seeker"

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
# default pulls `token_2022_extensions` (metadata/group/pod) — unused here; dropping saves BPF size.
anchor-spl = { version = "1.0.0", default-features = false, features = ["associated_token", "mint", "token", "token_2022"] }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
