[package]
name = "upgrade_governor"
version = "0.1.0"
description = "3-of-5 upgrade authority governor (minimal)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "upgrade_governor"

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
solana-loader-v3-interface = { version = "6.1.1", default-features = false, features = ["bincode"] }

[features]
idl-build = ["anchor-lang/idl-build"]
